# QtPokemong

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  mainwindow.cpp  mainwindow.h  res.qrc
Test/: CMakeLists.txt  main.cpp  tst_example.cpp  tst_linerbar.cpp
backend/: CMakeLists.txt  README.md  dbusserver.cpp  dbusserver.h
debian/: changelog  control  copyright  rules
game/: CMakeLists.txt  game.cpp  game.h  mainwindow.cpp  mainwindow.h  res.qrc
game/plugins/: CMakeLists.txt
game/pokemengwidgets/: pokemengmap.cpp  pokemengmap.h  pokemongtable.cpp  pokemongtable.h
include/interface/: gameinterface.h  myinterface.h  plugin.h
include/mywidgets/: mybattlemap.h  mybutton.h  mydrawer.h  mylinerbar.h  mypopupwindow.h  myprogress.h
include/mywidgets/basewidgets/: myoverlaywidget.h
include/mywidgets/models/: pokemongmodel.h
interface/: plugin.h
misc/: mytimer.timer  pokemongbackend.service  pokemonggame.gschema.xml
pingit/: CMakeLists.txt
plugins/: CMakeLists.txt  demo.cpp  demo.h
pokemengwidgets/: battleline.h  linerbar.cpp  linerbar.h  pokemengmap.cpp  pokemengmap.h
src/backend/: CMakeLists.txt  dbusserver.cpp  dbusserver.h
src/components/: CMakeLists.txt  mybattlemap.cpp  mybattlemap_internal.cpp  mybattlemap_internal.h  mybattlemap_p.h  mybutton.cpp  mybutton_internal.cpp  mybutton_internal.h  mybutton_p.h  mydrawer.cpp  mydrawer_internal.cpp  mydrawer_internal.h  mydrawer_p.h  mylinerbar.cpp  mylinerbar_internal.cpp  mylinerbar_internal.h  mylinerbar_p.h  mypopupwindow.cpp  mypopupwindow_internal.cpp  mypopupwindow_internal.h  mypopupwindow_p.h  myprogress.cpp  myprogress_internal.cpp  myprogress_internal.h  myprogress_p.h  res.qrc
src/components/basewidgets/: myoverlaywidget.cpp
src/components/models/: pokemongmodel.cpp
src/example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/game/: CMakeLists.txt  README.md  game.cpp  game.h  loading.cpp  loading.h  main.cpp  mainwindow.cpp  mainwindow.h
src/game/models/: pokemongmodel.cpp  pokemongmodel.h
src/game/plugins/: CMakeLists.txt  demo.cpp  demo.h  savemodel.cpp  savemodel.h  showmodel.cpp  showmodel.h
src/game/pokemengwidgets/: linerbar.cpp  linerbar.h  pokemengmap.cpp  pokemengmap.h  pokemongtable.cpp  pokemongtable.h
src/game/pokemongwidgets/: pokemongmap.cpp  pokemongtable.cpp
src/game/theme-icons/: theme-icons.qrc
src/pingit/: CMakeLists.txt  README.md  dbusclient.cpp
tests/: CMakeLists.txt  main.cpp  tst_linerbar.cpp  tst_mybattlemap.cpp  tst_mybutton.cpp  tst_mydrawer.cpp  tst_mylinerbar.cpp  tst_mypopupwindow.cpp  tst_myprogress.cpp  tst_pokemongmap.cpp  tst_pokemongmodel.cpp  tst_table.cpp
