project(mygame)
cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(GNUInstallDirs)
set(STARTTEST OFF)
if(CMAKE_BUILD_TYPE STRLESS_EQUAL "Debug")
  set(STARTTEST ON)
endif ()
#add_executable(cmake_study src/main.cpp src/header.h)
add_subdirectory(src/game)
add_subdirectory(src/backend)
add_subdirectory(src/pingit)
add_subdirectory(src/example)
add_subdirectory(src/components)
if (STARTTEST)
  add_subdirectory(tests)
endif ()
install(FILES misc/mytimer.timer DESTINATION "/usr/lib/systemd/user")
install(FILES misc/pokemongbackend.service DESTINATION "/usr/lib/systemd/user")
install(FILES misc/pokemonggame.gschema.xml DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/glib-2.0/schemas")
